{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 95,
  "lineage": "60310b87-a5f7-53f0-1171-d1419303128f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "study_nat_01_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0dcfe8a145ccbe0ac",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-178-228-181.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.228.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "study_nat_02_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00789ace0159d4de4",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-73-87-125.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.87.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "study_ubuntu_01_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df99b3a8349462c6",
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:instance/i-074a8812fe0d85823",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074a8812fe0d85823",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e156ab508a9c231",
            "private_dns": "ip-10-10-20-44.ap-northeast-1.compute.internal",
            "private_ip": "10.10.20.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a15d04d315570ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026d33705770cd84f",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00778ff798b6e19bc"
            ]
          },
          "dependencies": [
            "aws_security_group.study_ec2_security_group",
            "aws_subnet.study_private_01_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "study_ubuntu_02_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df99b3a8349462c6",
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:instance/i-02b4e70fb2461fa1c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b4e70fb2461fa1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0688a9c9a9f12ea9d",
            "private_dns": "ip-10-10-21-23.ap-northeast-1.compute.internal",
            "private_ip": "10.10.21.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e56ab4c75ff4bc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072b578803656d711",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00778ff798b6e19bc"
            ]
          },
          "dependencies": [
            "aws_security_group.study_ec2_security_group",
            "aws_subnet.study_private_02_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "study_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:internet-gateway/igw-075653caa3a2f9729",
            "id": "igw-075653caa3a2f9729",
            "owner_id": "614127399283",
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "study_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:614127399283:loadbalancer/app/study-alb/03f5bb8855caab85",
            "arn_suffix": "app/study-alb/03f5bb8855caab85",
            "dns_name": "study-alb-189350810.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:614127399283:loadbalancer/app/study-alb/03f5bb8855caab85",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "study-alb",
            "security_groups": [
              "sg-02f7641a9acbaf856"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002e6447d05c7c3bf"
              },
              {
                "subnet_id": "subnet-05818d7e280589f32"
              }
            ],
            "subnets": [
              "subnet-002e6447d05c7c3bf",
              "subnet-05818d7e280589f32"
            ],
            "vpc_id": "vpc-03ab93c9f76f85d28",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.study_lb_security_group",
            "aws_subnet.study_public_01_subent",
            "aws_subnet.study_public_02_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "study_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:614127399283:targetgroup/study-alb-target-group/0cab65d7263e36be",
            "arn_suffix": "targetgroup/study-alb-target-group/0cab65d7263e36be",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:614127399283:targetgroup/study-alb-target-group/0cab65d7263e36be",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "study-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "study_01_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcfe8a145ccbe0ac",
            "connectivity_type": "public",
            "id": "nat-058b20f7eb34ff9f3",
            "network_interface_id": "eni-0b2b28431227ec5bc",
            "private_ip": "10.10.10.224",
            "public_ip": "18.178.228.181",
            "subnet_id": "subnet-002e6447d05c7c3bf"
          },
          "dependencies": [
            "aws_eip.study_nat_01_eip",
            "aws_subnet.study_public_01_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "study_02_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00789ace0159d4de4",
            "connectivity_type": "public",
            "id": "nat-0a494af4ecfe37dd3",
            "network_interface_id": "eni-0a6f67e8a99b98e10",
            "private_ip": "10.10.11.182",
            "public_ip": "35.73.87.125",
            "subnet_id": "subnet-05818d7e280589f32"
          },
          "dependencies": [
            "aws_eip.study_nat_02_eip",
            "aws_subnet.study_public_02_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "study_private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-000a917d4aac649481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-058b20f7eb34ff9f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-000a917d4aac64948",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.study_nat_01_eip",
            "aws_nat_gateway.study_01_nat",
            "aws_route_table.study_private_01_route_table",
            "aws_subnet.study_public_01_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "study_private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08ffedaa6a2087b7c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a494af4ecfe37dd3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08ffedaa6a2087b7c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.study_nat_02_eip",
            "aws_nat_gateway.study_02_nat",
            "aws_route_table.study_private_02_route_table",
            "aws_subnet.study_public_02_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "study_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-075653caa3a2f9729",
            "id": "r-rtb-027e3399019e7005e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027e3399019e7005e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.study_igw",
            "aws_route_table.study_public_route_table",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "study_private_01_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:route-table/rtb-000a917d4aac64948",
            "id": "rtb-000a917d4aac64948",
            "owner_id": "614127399283",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "study_private_02_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:route-table/rtb-08ffedaa6a2087b7c",
            "id": "rtb-08ffedaa6a2087b7c",
            "owner_id": "614127399283",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "study_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:route-table/rtb-027e3399019e7005e",
            "id": "rtb-027e3399019e7005e",
            "owner_id": "614127399283",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "study_private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dfff9ac28a51192",
            "route_table_id": "rtb-000a917d4aac64948",
            "subnet_id": "subnet-026d33705770cd84f"
          },
          "dependencies": [
            "aws_route_table.study_private_01_route_table",
            "aws_subnet.study_private_01_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "study_private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044b5488adec37a49",
            "route_table_id": "rtb-08ffedaa6a2087b7c",
            "subnet_id": "subnet-072b578803656d711"
          },
          "dependencies": [
            "aws_route_table.study_private_02_route_table",
            "aws_subnet.study_private_02_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "study_public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d668643e37d388b",
            "route_table_id": "rtb-027e3399019e7005e",
            "subnet_id": "subnet-002e6447d05c7c3bf"
          },
          "dependencies": [
            "aws_route_table.study_public_route_table",
            "aws_subnet.study_public_01_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "study_public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dee558f312e1933",
            "route_table_id": "rtb-027e3399019e7005e",
            "subnet_id": "subnet-05818d7e280589f32"
          },
          "dependencies": [
            "aws_route_table.study_public_route_table",
            "aws_subnet.study_public_02_subent",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "study_ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:security-group/sg-00778ff798b6e19bc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00778ff798b6e19bc",
            "ingress": [],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "614127399283",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "study_lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:security-group/sg-02f7641a9acbaf856",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02f7641a9acbaf856",
            "ingress": [],
            "name": "lb_security_group",
            "name_prefix": "",
            "owner_id": "614127399283",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "106.73.5.97/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3437808814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00778ff798b6e19bc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.study_ec2_security_group",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1019951417",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00778ff798b6e19bc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.study_ec2_security_group",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "106.73.5.97/32"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1374720528",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f7641a9acbaf856",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.study_lb_security_group",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1359706866",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02f7641a9acbaf856",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.study_lb_security_group",
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "study_private_01_subent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:subnet/subnet-026d33705770cd84f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.20.0/24",
            "id": "subnet-026d33705770cd84f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614127399283",
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "study_private_02_subent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:subnet/subnet-072b578803656d711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.21.0/24",
            "id": "subnet-072b578803656d711",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614127399283",
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "study_public_01_subent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:subnet/subnet-002e6447d05c7c3bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-002e6447d05c7c3bf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614127399283",
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "study_public_02_subent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:subnet/subnet-05818d7e280589f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-05818d7e280589f32",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614127399283",
            "vpc_id": "vpc-03ab93c9f76f85d28"
          },
          "dependencies": [
            "aws_vpc.study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "study_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:614127399283:vpc/vpc-03ab93c9f76f85d28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-00fdd2a2b570659f4",
            "default_route_table_id": "rtb-000ed0f924649ea39",
            "default_security_group_id": "sg-0e71c61ee75b61941",
            "dhcp_options_id": "dopt-3869385f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03ab93c9f76f85d28",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-000ed0f924649ea39",
            "owner_id": "614127399283"
          }
        }
      ]
    }
  ]
}